More Y XX -> Z X clarifications Now allow "constant $?TABSTOP = 4" syntax for user to set compiler variables.
git-svn-id: http://svn.pugscode.org/pugs@23748 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S03.pod
+++ b/doc/trunk/design/syn/S03.pod
@@ -1107,6 +1107,13 @@ and you end up with
 
     ('a', '1'), ('a', '2'), ('b', '1'), ('b', '2')
 
+This becomes a flat list in C<@> context and a list of arrays in C<@@> context:
+
+    say @(<a b> X <1 2>)
+    'a', '1', 'a', '2', 'b', '1', 'b', '2'
+    say @@(<a b> X <1 2>)
+    ['a', '1'], ['a', '2'], ['b', '1'], ['b', '2']
+
 =item *
 
 Cross hyperoperators
