Change hardwired 8 to $?TABSTOP // 8 for heredocs
git-svn-id: http://svn.pugscode.org/pugs@23749 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -2475,7 +2475,7 @@ delimiter.  Leading whitespace equivalent to the indentation of the
 delimiter will be removed from all preceding lines.  If a line is
 deemed to have less whitespace than the terminator, only whitespace
 is removed, and a warning may be issued.  (Hard tabs will be assumed
-to be 8 spaces, but as long as tabs and spaces are used consistently
+to be C<< ($?TABSTOP // 8) >> spaces, but as long as tabs and spaces are used consistently
 that doesn't matter.)  A null terminating delimiter terminates on
 the next line consisting only of whitespace, but such a terminator
 will be assumed to have no indentation.  (That is, it's assumed to
