--- a/doc/trunk/design/syn/S03.pod
+++ b/doc/trunk/design/syn/S03.pod
@@ -574,7 +574,7 @@ infix:<?&>, boolean bitwise and
 
 Any bit shift operator may be turned into a rotate operator with the
 C<:rotate> adverb.  If C<:rotate> is specified, the concept of
-sign extenstion is meaningless, and you may not specify a C<:signed> adverb.
+sign extension is meaningless, and you may not specify a C<:signed> adverb.
 
 =head2 Additive precedence
 
